Se agrega breve descripción del sistema al ingresar a los paneles, tambien se agrega en los reportes generados. Se modificaron los subfactores del factor 3 Equipos de Trabajo.

--- a/templates/panel_jefa_salud.html
+++ b/templates/panel_jefa_salud.html
@@ -54,4 +54,9 @@
         {{ render_pagination(pagination, 'jefa_salud.panel_jefa_salud') }}
     </div>
 </div>
+<div class="mt-12 p-4 bg-yellow-50 border border-yellow-200 rounded-lg text-center mx-auto max-w-5xl">
+    <p class="text-sm text-gray-600 italic text-justify">
+        "El registro de información en esta aplicación tiene carácter exclusivamente orientador y de ayuda memoria para la gestión diaria entre el jefe directo y funcionario. No constituye antecedente válido para el proceso de Calificación Funcionaria. Para efectos de evaluación del desempeño, se considerarán únicamente las Anotaciones de Mérito y de Demérito debidamente formalizadas según la normativa vigente."
+    </p>
+</div>
 {% endblock %}
