--- a/templates/mi_libro_novedades.html
+++ b/templates/mi_libro_novedades.html
@@ -145,5 +145,10 @@
         {% endif %}
     </div>
 </div>
+<div class="mt-12 p-4 bg-yellow-50 border border-yellow-200 rounded-lg text-center mx-auto max-w-5xl">
+    <p class="text-sm text-gray-600 italic text-justify">
+        "El registro de información en esta aplicación tiene carácter exclusivamente orientador y de ayuda memoria para la gestión diaria entre el jefe directo y funcionario. No constituye antecedente válido para el proceso de Calificación Funcionaria. Para efectos de evaluación del desempeño, se considerarán únicamente las Anotaciones de Mérito y de Demérito debidamente formalizadas según la normativa vigente."
+    </p>
+</div>
 <script src="{{ url_for('static', filename='filter_helper.js') }}"></script>
 {% endblock %}
